<resources>
    <string name="app_name">AgriculturApp</string>
    <string name="title_menu">Menú</string>
    <string name="title_lote">Lote</string>
    <string name="title_module_asistencia_tecnica">Asistencia Técnica</string>
    <string name="title_module_comercial">Comercial</string>
    <string name="title_module_contable">Contabilidad</string>
    <string name="results_global_search">Mostrando %d Resultados</string>
    <string name="error_field_required">Campo Requerido</string>
    <string name="nombre_usuario_nav">%1s %2s</string>
    <string name="order_dates">Error en el orden de las fechas</string>
    <string name="coords">%1s  /  %2s</string>
    <string name="title_ingresar">Ingresar</string>
    <string name="title_registrarse">Registrarse</string>
    <string name="title_contactanos">Contáctanos</string>
    <string name="edit_text_cedula">Número de Cédula</string>
    <string name="edit_text_correo">Correo Electrónico</string>
    <string name="edit_text_contrasena">Contraseña</string>
    <string name="snackbar_datos_incorrectos">Usuario o Contraseña Incorrectos</string>
    <string name="nav_open">Abierto</string>
    <string name="nav_close">Cerrado</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_usuario">Usuarios</string>
    <string name="title_sms_text">Mensajes de Texto</string>
    <string name="title_productor">Productor</string>
    <string name="title_comprador">Comprador</string>
    <string name="title_help_register">Necesito ayuda para registrarme</string>
    <string name="title_selected_options">Seleccione una de las siguientes opciones</string>
    <string name="title_register_productor">¡Te estás registrando como productor!</string>
    <string name="text_registerUP">Registro Unidad Productiva</string>
    <string name="title_register_comprador">¡Te estás registrando como comprador!</string>
    <string name="registro_exitoso">Registrado Éxitosamente</string>
    <string name="edit_text_description">Breve descripción</string>
    <string name="edit_text_nombre_finca">Nombre</string>
    <string name="edit_text_localizacion_finca">Localización</string>
    <string name="edit_text_latitud_finca">Latitud</string>
    <string name="edit_text_longitud_finca">Longitud</string>
    <string name="btn_registrar_productor">Registrar</string>
    <string name="edit_text_numero_hectareas">Número de Hectáreas</string>
    <string name="edit_text_mes_siembra">Mes de Siembra</string>
    <string name="edit_text_mes_cosecha">Mes de Cosecha</string>
    <string name="title_cantidad_calidad">Cantidad por Calidad del producto</string>
    <string name="title_cantidad_registrar_productor">Cantidad:</string>
    <string name="edit_text_cantidad_kg">Cantidad(Kg)</string>
    <string name="edit_text_nombres">Nombres</string>
    <string name="edit_text_apellidos">Apellidos</string>
    <string name="edit_text_confirmar_contrasena">Confirmar contraseña</string>
    <string name="edit_text_numero_celular">Número de Celular</string>
    <string name="spinner_metodo_pago">Método de Pago</string>
    <string name="spinner_banco">Seleccionar Banco</string>
    <string name="edit_text_numero_cuenta">Número de Cuenta</string>
    <string name="edit_text_error_contrasenas">Las contraseñas no son iguales</string>
    <string name="edit_text_error_contrasena">La contraseña es muy corta</string>
    <string name="edit_text_pattern_contrasena">La contraseña debe tener una mayúscula, un número y un caracter alfanumérico</string>
    <string name="edit_text_error_correo">Formato de Correo no válido</string>
    <string name="snackbar_verificacion_correo">Se ha enviado un correo de verificación</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_reset_password">Digita tu correo electronico para restablecer tu contraseña</string>
    <string name="btn_send_reset_password">Enviar Email</string>
    <string name="send_email_reset_password_ok">Se ha enviado un link a su direccion de correo electronico  </string>
    <string name="maps">AIzaSyA8ttTHUZLtDLvxcRY56H8iVcTt9Fofo3U</string>
    <string name="draw_polygon">Dibujar Polígono</string>
    <string name="draw_points">Dibujar Puntos</string>
    <string name="alert">Alerta</string>
    <string name="msgAlertConn">No tienes conexión a Internet, verifica tu conexión!</string>
    <string name="infoGPS">El sistema GPS está desactivado, ¿Desea activarlo?</string>
    <string name="disabledGPS">El sistema GPS está desactivado, Necesitas habilitar el GPS</string>
    <string name="GpsOutService">Proveedor fuera de servicio de localización, intenta más
    tarde.</string>
    <string name="GpsTempUnavailable">Temporalmente no disponible el servicio de GPS.</string>
    <string name="gps_disabled">Activar GPS</string>
    <string name="please_enable_gps">Necesitas habilitar el GPS</string>
    <string name="loader_gps">Iniciando GPS</string>
    <string name="enable_permissions_gps_settings">Por favor habilita el permiso de ubicación</string>
    <string name="location_gps">Ubicacion Actual</string>
    <string name="verifcate_coord">El valor no se puede asignar a una coordenada, contiene caracteres invalidos</string>
    <string name="add_lote">Agregar Lote</string>
    <string name="edit_lote">Editar Lote</string>
    <string name="message_add_lote">Digite los todos lo campos</string>
    <string name="location_lote_select_type">¿Cómo desea ubicar el lote?</string>
    <string name="tittle_add_coord_lote_gps">Agregar Lote</string>
    <string name="location_type_gps">Ubicación con GPS</string>
    <string name="location_type_manual">Ubicación Manual</string>
    <string name="alert_delete_lote">¿Está seguro que desea eliminar el Lote?, se perderan todos los registros, Cultivos,Produccion, Productos, Transacciones y Ofertas de este Lote</string>
    <string name="select_UP">Seleccione Unidad Productiva</string>
    <string name="message_location_lote">Seleccione una opción de ubicación</string>
    <string name="message_location_lote_marker">Haga click en el mapa para ubicar el lote</string>
    <string name="title_list_unidad_productiva">Lista de unidades productivas</string>
    <string name="title_filter_unidad_productiva">Filtrar lote por unidad productiva</string>
    <string name="verifcate_area_lote">Verifica. El área  total de lotes supera el área de la Unidad Productiva</string>
    <string name="add_new_lote_info">Haga click para registrar su lote</string>
    <string name="tittle_add_unidadproductiva">Agregar Unidad Productiva</string>
    <string name="tittle_edit_unidadproductiva">Editar Unidad Productiva</string>
    <string name="title_up">Unidad Productiva</string>
    <string name="spinner_departamento">Departamento</string>
    <string name="spinner_municipio">Municipio</string>
    <string name="registra_up">Registra tu Unidad Productiva</string>
    <string name="alert_delete_up">¿Está seguro que desea eliminar la Unidad Productiva ?, se perderan todos los registros de Lotes, Cultivos, Produccion, Productos, Transacciones y Ofertas de esta Unidad Productiva</string>
    <string name="tittle_producccion">Producción</string>
    <string name="tittle_add_producccion">Registrar Producción</string>
    <string name="tittle_edit_producccion">Editar Producción</string>
    <string name="spinner_cultivo">Cultivo</string>
    <string name="title_date_end">Fecha de Fin</string>
    <string name="title_date_start">Fechas de Inicio</string>
    <string name="tittle_date_produccion">Fechas de Producción</string>
    <string name="tittle_select_cultivo">Seleccione el cultivo para agregar la producción</string>
    <string name="title_alert_delete_produccion">¿Está seguro que desea eliminar la producción?</string>
    <string name="edit_text_nombre_cultivo"> Nombre del Cultivo</string>
    <string name="edit_text_descripcion_cultivo">Descripción</string>
    <string name="edit_text_estimado_cosecha">Cosecha Estimada</string>
    <string name="edit_text_fecha_inicio">Fecha de Inicio</string>
    <string name="edit_text_fecha_fin">Fecha de Fin</string>
    <string name="spinner_unidad_productiva">Unidad Productiva</string>
    <string name="spinner_lote">Lote</string>
    <string name="title_add_cultivo">Agregar Cultivo</string>
    <string name="title_cultivo">Cultivo</string>
    <string name="snackbar_error_unidad_productiva">Debes registrar primero tu Unidad Productiva</string>
    <string name="snackbar_error_up">Debes seleccionar unidad productiva</string>
    <string name="snackbar_error_lote">Debes seleccionar lote</string>
    <string name="error_lotes">No hay lotes registrados</string>
    <string name="alert_delete_cultivo">¿Está seguro que desea eliminar el Cultivo? , se perderan todos los registros de Producción, Productos, Transacciones y Ofertas de Este Cultivo</string>
    <string name="spinner_tipo_producto">Tipo Producto</string>
    <string name="spinner_detalle_tipo_producto">Detalle Tipo Producto</string>
    <string name="tittle_select_lote">Seleccione el lote para agregar un cultivo</string>
    <string name="tittle_edit_cultivo">Editar cultivo</string>
    <string name="tittle_simbra_total">Cantidad Siembra</string>
    <string name="title_plagas">Plagas</string>
    <string name="title_plaga">Plaga</string>
    <string name="title_selected_tipo_productos">Seleccione el producto</string>
    <string name="title_selected_plaga">Selecciona la Plaga</string>
    <string name="title_selected_insumo">Selecciona el Insumo</string>
    <string name="title_fecha_aplicacion_control">Fecha de aplicacion</string>
    <string name="title_sync_data_enfermedades">Sincronizacion</string>
    <string name="content_message_syn_data_enfermedades">Continuar con la actualizacion de datos, para enfermedades y tratamiento</string>
    <string name="tittle_dowload_plagas">Notifcacion</string>
    <string name="verifcate_download_info">Desea descargar informacion de plagas y enfermedades, esto tomara unos minutos?</string>
    <string name="verifcate_conection_info">Verifica tu conexion a internet e intenta nuevamente</string>
    <string name="ver_insumos">Ver Insumos</string>
    <string name="ver_tratamiento">Ver Tratamiento</string>
    <string name="nombre_comercial">Nombre Comercial :</string>
    <string name="ingrediente_activo">Ingrediente Activo :</string>
    <string name="formulacion">Formulación :</string>
    <string name="aplicacion">Aplicación :</string>
    <string name="modo_accion">Modo de Acción :</string>
    <string name="precio_aproximado">Precio Aproximado :</string>
    <string name="btn_control_plaga">Registrar Control Plaga</string>
    <string name="tittle_select_cultivo_tratamiento">Seleccione el cultivo para agregar el control de plaga</string>
    <string name="title_add_control_plaga">Registrar Control de Plaga</string>
    <string name="edit_text_fecha_aplicacion">Fecha de Aplicación</string>
    <string name="edit_text_dosis">Dosis</string>
    <string name="title_control_plagas">Control Plagas</string>
    <string name="title_fecha_aplicacion">Fecha de Aplicación</string>
    <string name="title_dosis">Dosis</string>
    <string name="title_insumo">Insumo</string>
    <string name="title_fecha_erradicacion">Fecha de Erradicación</string>
    <string name="title_alert_control_plaga">¿Está seguro que desea eliminar el control para esta plaga?</string>
    <string name="title_vigente">Vigente</string>
    <string name="btn_erradicar">Erradicar</string>
    <string name="title_interval_transactions">Intervalo de Transacción</string>
    <string name="coordenadas">Coordenadas</string>
    <string name="name">Nombre</string>
    <string name="description">Descripción</string>
    <string name="area">Área</string>
    <string name="cancel">Cancelar</string>
    <string name="btn_save">Guardar</string>
    <string name="title_unidad">Unidad</string>
</resources>