<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dialogContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/margin_3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ivClosetDialogCultivo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_close_white"
                android:tint="@color/grey_luiyi" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
                    android:id="@+id/spinnerUnidadProductiva"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawableLeft="@drawable/ic_nombre_finca"
                    android:drawableStart="@drawable/ic_nombre_finca"
                    android:hint="@string/spinner_unidad_productiva"
                    android:textAlignment="center"
                    android:textColorHint="@color/grey_luiyi"
                    android:textSize="@dimen/text_size_18"
                    android:visibility="gone"
                    app:met_baseColor="@color/grey_luiyi"
                    app:met_floatingLabel="normal"
                    app:met_floatingLabelTextColor="@color/grey_luiyi"
                    app:met_primaryColor="@color/grey_luiyi"
                    app:met_textColor="@color/grey_luiyi"
                    app:met_textColorHint="@color/black_alpha_40" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
                    android:id="@+id/spinnerLote"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawableLeft="@drawable/ic_nombre_finca"
                    android:drawableStart="@drawable/ic_nombre_finca"
                    android:hint="@string/spinner_lote"
                    android:textAlignment="center"
                    android:textColorHint="@color/grey_luiyi"
                    android:textSize="@dimen/text_size_18"
                    android:visibility="gone"
                    app:met_baseColor="@color/grey_luiyi"
                    app:met_floatingLabel="normal"
                    app:met_floatingLabelTextColor="@color/grey_luiyi"
                    app:met_primaryColor="@color/grey_luiyi"
                    app:met_textColor="@color/grey_luiyi"
                    app:met_textColorHint="@color/black_alpha_40" />

            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

                <EditText
                    android:id="@+id/edtNombreCultivo"
                    style="@style/editText"
                    android:drawableLeft="@drawable/ic_nombre_finca"
                    android:drawableStart="@drawable/ic_nombre_finca"
                    android:hint="@string/edit_text_nombre_cultivo"
                    android:inputType="text" />


            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

                <EditText
                    android:id="@+id/edtDescripcionCultivo"
                    style="@style/editText"
                    android:drawableLeft="@drawable/ic_nombre_finca"
                    android:drawableStart="@drawable/ic_nombre_finca"
                    android:hint="@string/edit_text_descripcion_cultivo"
                    android:inputType="text" />
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.9"
                    app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

                    <EditText
                        android:id="@+id/edtEstimadoCosecha"
                        style="@style/editText"
                        android:drawableLeft="@drawable/ic_localizacion_finca"
                        android:drawableStart="@drawable/ic_localizacion_finca"
                        android:hint="@string/edit_text_estimado_cosecha"
                        android:inputType="numberDecimal" />
                </android.support.design.widget.TextInputLayout>

                <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
                    android:id="@+id/spinnerUnidadMedidaCosecha"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:drawableLeft="@drawable/ic_medicion"
                    android:drawableStart="@drawable/ic_medicion"
                    android:hint="@string/title_unidad"
                    android:textAlignment="center"
                    android:textColorHint="@color/grey_luiyi"
                    android:textSize="@dimen/text_size_18"
                    app:met_baseColor="@color/grey_luiyi"
                    app:met_floatingLabel="normal"
                    app:met_floatingLabelTextColor="@color/grey_luiyi"
                    app:met_primaryColor="@color/grey_luiyi"
                    app:met_textColor="@color/grey_luiyi"
                    app:met_textColorHint="@color/black_alpha_40" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.9"
                    app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

                    <EditText
                        android:id="@+id/edtFechaInicio"
                        style="@style/editText"
                        android:drawableLeft="@drawable/ic_localizacion_finca"
                        android:drawableStart="@drawable/ic_localizacion_finca"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:hint="@string/edit_text_fecha_inicio" />
                </android.support.design.widget.TextInputLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.9"
                    app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

                    <EditText
                        android:id="@+id/edtFechaFin"
                        style="@style/editText"
                        android:drawableLeft="@drawable/ic_localizacion_finca"
                        android:drawableStart="@drawable/ic_localizacion_finca"
                        android:editable="false"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:hint="@string/edit_text_fecha_fin" />
                </android.support.design.widget.TextInputLayout>


            </LinearLayout>

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnRegisterCultivo"
                    style="@style/small_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/margin_global_10"
                    android:background="@drawable/custom_button"
                    android:text="@string/btn_registrar_productor" />

                <Button
                    android:id="@+id/btnUpdateCultivo"
                    style="@style/small_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/margin_global_10"
                    android:background="@drawable/custom_button"
                    android:text="@string/btn_save" />

                <Button
                    android:id="@+id/btnCancelCultivo"
                    style="@style/small_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/margin_global_10"
                    android:background="@drawable/custom_button"
                    android:text="@string/cancel" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>