<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView android:layout_below="@+id/container_filter"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_3"
    android:foreground="?android:attr/selectableItemBackground"
    app:cardBackgroundColor="@android:color/white"
    app:cardCornerRadius="6dp"
    app:cardElevation="1dp"
    app:cardUseCompatPadding="true"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/margin_3">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_interval_transactions"
            android:textColor="@color/grey_luiyi"
            android:textSize="@dimen/text_size_20"
            android:textStyle="bold" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/grey_luiyi"
            app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

            <EditText
                android:id="@+id/txtDateStarReport"
                style="@style/editText"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:drawableLeft="@drawable/ic_mes"
                android:drawableStart="@drawable/ic_mes"
                android:hint="@string/title_date_start"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutNombres"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/grey_luiyi"
            app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

            <EditText
                android:id="@+id/txtDateEndReport"
                style="@style/editText"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:drawableLeft="@drawable/ic_mes"
                android:drawableStart="@drawable/ic_mes"
                android:hint="@string/title_date_end"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>
</android.support.v7.widget.CardView>