<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/fondo_general"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    android:layout_height="match_parent">


    <RelativeLayout
        android:layout_marginStart="@dimen/margin_10"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/ivClosetDialogLote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tint="@color/grey_luiyi"
            android:src="@drawable/ic_back_button"/>

        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="11dp"
            android:gravity="center"
            android:text="@string/add_lote"
            android:textColor="@color/purple"
            android:textSize="@dimen/text_size_18"
            android:textStyle="bold" />
        <ImageView
            android:id="@+id/logo"
            android:layout_marginTop="-15dp"
            android:layout_marginBottom="-15dp"
            android:layout_below="@+id/txtTitle"
            android:layout_width="match_parent"
            android:layout_height="90sp"
            android:layout_gravity="center"
            android:src="@drawable/ic_lote" />
        <View
            android:id="@+id/division"
            android:layout_below="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:background="@color/purple" />
    </RelativeLayout>

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:paddingBottom="@dimen/margin_24"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        <!--
        <ImageView
            android:id="@+id/ivClosetDialogLote"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:background="@color/light_green_800"
            android:tint="@color/white"
            android:contentDescription="@string/app_name"
            android:scaleType="center"
            android:src="@android:drawable/ic_menu_close_clear_cancel" />-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

                <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
                    android:id="@+id/spinnerUnidadProductiva"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_localizacion_finca"
                    android:drawableStart="@drawable/ic_localizacion_finca"
                    android:hint="@string/select_UP"
                    android:textAlignment="textStart"
                    android:textColorHint="@color/grey_luiyi"
                    android:textSize="@dimen/text_size_18"
                    app:met_baseColor="@color/grey_luiyi"
                    app:met_floatingLabel="normal"
                    app:met_floatingLabelTextColor="@color/grey_luiyi"
                    app:met_primaryColor="@color/grey_luiyi"
                    app:met_textColor="@color/grey_luiyi"
                    app:met_textColorHint="@color/black_alpha_40" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/textInputLayoutNombres"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/grey_luiyi"
                    app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

                    <EditText
                        android:id="@+id/name_lote"
                        style="@style/editText"
                        android:drawableLeft="@drawable/ic_nombres"
                        android:drawableStart="@drawable/ic_nombres"
                        android:hint="@string/name"
                        android:inputType="text" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/textInputLayoutDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/grey_luiyi"
                    app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

                    <EditText
                        android:layout_height="@dimen/height_150"
                        android:gravity="start"
                        android:inputType="text|textMultiLine"
                        android:id="@+id/description_lote"
                        style="@style/editText"
                        android:drawableLeft="@drawable/ic_apellidos"
                        android:drawableStart="@drawable/ic_apellidos"
                        android:hint="@string/description"
                         />
                </android.support.design.widget.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:layout_height="wrap_content">
                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/textInputLayoutArea"
                        android:layout_width="match_parent"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:textColorHint="@color/grey_luiyi"
                        app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

                        <EditText
                            android:id="@+id/area_lote"
                            style="@style/editText"
                            android:drawableLeft="@drawable/ic_numero_hectareas"
                            android:drawableStart="@drawable/ic_numero_hectareas"
                            android:hint="@string/area"
                            android:inputType="numberDecimal" />
                    </android.support.design.widget.TextInputLayout>


                    <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
                        android:id="@+id/spinnerUnidadMedidaLote"
                        android:layout_width="100dp"
                        android:layout_height="match_parent"
                        android:hint="@string/title_unidad"
                        android:textColorHint="@color/grey_luiyi"
                        android:textSize="@dimen/text_size_18"
                        android:textAlignment="center"
                        android:drawableLeft="@drawable/ic_medicion"
                        android:drawableStart="@drawable/ic_medicion"
                        app:met_baseColor="@color/grey_luiyi"
                        app:met_floatingLabel="normal"
                        app:met_floatingLabelTextColor="@color/grey_luiyi"
                        app:met_primaryColor="@color/grey_luiyi"
                        app:met_textColor="@color/grey_luiyi"
                        app:met_textColorHint="@color/black_alpha_40" />


                </LinearLayout>



                <android.support.design.widget.TextInputLayout
                    android:id="@+id/textInputLayoutCoordenadas"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/grey_luiyi"
                    app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

                    <EditText
                        android:id="@+id/coordenadas_lote"
                        style="@style/editText"
                        android:enabled="false"
                        android:drawableLeft="@drawable/ic_apuntador"
                        android:drawableStart="@drawable/ic_apuntador"
                        android:hint="@string/coordenadas"
                        android:inputType="textEmailAddress" />
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>
            <Button
                android:id="@+id/btnSaveLote"
                style="@style/button"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_global"
                android:background="@color/purple"
                android:text="@string/btn_save" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>

</LinearLayout>